fixed legibility issue by tweaking opacity of blur-layer

--- a/frontend/src/components/search/css/Search.css
+++ b/frontend/src/components/search/css/Search.css
@@ -1,3 +1,7 @@
+#search-bar-header{
+    color: white;
+}
+
 .searchbar-form-group {
     margin-bottom: 0;
 }
@@ -22,4 +26,5 @@
     width: 100%;
     height: 100%;
     backdrop-filter: blur(5px);
+    background: rgba(0, 0, 0, 0.4);
 }
